Fixed scaling on iphone

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -179,6 +179,10 @@ body {
         font-weight: 400;
     }
     
+    #ending-page{
+        transform: scale(1);
+    }
+    
     #select-picture {
         margin-top: 0px;
     }
